# hub

./: .env.production  .gitignore  Cargo.toml  Dockerfile  FAQ.md  LICENSE  README.md  TERMS.md  VERIFY.md  canister_ids.json  package-lock.json  package.json
backend/api/: Cargo.toml  can.did
backend/assets/: Cargo.toml  hub_assets_backend.did
backend/assets/src/: get_canister_status.rs  http_request.rs  lib.rs
backend/candid/: Cargo.toml
backend/candid/src/: main.rs
backend/impl/: Cargo.toml
backend/impl/src/: lib.rs
backend/impl/src/components/: .gitignore  factory.rs  mod.rs
backend/impl/src/handlers/: mod.rs
backend/impl/src/handlers/deployments/: expenses_calculator.rs  factory.rs  mod.rs  processor.rs
backend/impl/src/handlers/deployments/states/: create_contract_canister_over_cmc.rs  create_contract_canister_over_management.rs  generate_contract_certificate.rs  install_contract_wasm.rs  make_contract_self_controlled.rs  mod.rs  notify_top_up_cmc.rs  start_deployment.rs  start_deployment_finalization.rs  start_install_wasm.rs  transfer_deployer_funds_to_transit_account.rs  transfer_top_up_funds_to_cmc.rs  transfer_transit_funds_to_external_service.rs  upload_contract_wasm.rs
backend/impl/src/handlers/templates/: mod.rs
backend/impl/src/handlers/wallet/: mod.rs
backend/impl/src/lifecycle/: init.rs  post_upgrade.rs
backend/impl/src/model/: access_rights.rs  blocked_contracts.rs  config.rs  deployments.rs  hub_events.rs  mod.rs  templates.rs  wasm.rs
backend/impl/src/queries/: get_access_rights.rs  get_canister_metrics.rs  get_config.rs  get_contract_activation_code.rs  get_contract_block_status.rs  get_contract_template.rs  get_contract_templates.rs  get_deployment.rs  get_deployment_events.rs  get_deployments.rs  get_hub_events.rs  mod.rs  obtain_contract_certificate.rs
backend/impl/src/state/: mod.rs
backend/impl/src/test/: mod.rs
backend/impl/src/test/tests/: contract_management.rs  deployment_management.rs  expenses_calculator.rs  set_access_rights.rs  set_config.rs
backend/impl/src/test/tests/components/: certification.rs  cmc.rs  ic.rs  ic_management.rs  icrc2_ledger.rs  ledger.rs  logger.rs  mod.rs  rand.rs  time.rs
backend/impl/src/test/tests/drivers/: contract.rs  deployment.rs  mod.rs
backend/impl/src/test/tests/support/: fixtures.rs
backend/impl/src/updates/: add_contract_template.rs  block_contract_template.rs  block_contracts.rs  cancel_deployment.rs  deploy_contract.rs  initialize_contract_certificate.rs  mod.rs  process_deployment.rs  retry_generate_contract_certificate.rs  set_access_rights.rs  set_config.rs  set_contract_template_retired.rs  set_upload_wasm_grant.rs  upload_wasm_chunk.rs  validate_contract_certificate.rs
frontend/: .ic-assets.json  package.json  tsconfig.base.json  vite.config.js
frontend/public/.well-known/: ic-domains  (+1 more)
frontend/src/: constants.ts  i18.tsx  vite-env.d.ts
(+229 files in other folders)
