[package]
name = "hub_assets_backend"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
serde.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-http-certification.workspace = true
ic-certification.workspace = true
include_dir.workspace = true
common_embed_assets = { workspace = true }
common_canister_api = { workspace = true }
common_canister_impl = { workspace = true }
