[package]
name = "hub_canister_candid"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common_canister_api = { workspace = true }
hub_canister_api = { path = "../api" }
candid = { workspace = true }
icgeek_candid_gen = { workspace = true }
